--- a/index.html
+++ b/index.html
@@ -2,26 +2,26 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="sketch.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <nav id = "navBar">
+      <ul>
+        <li><a href="index.html">Home!</a></li>
+          <li><a href="html/Page1.html">Thought 1</a></li>
+          <li><a href="html/Page2.html">Thought 2</a></li>
+          <li><a href="html/Page3.html">Thought 5</a></li>
+          <li><a href="html/Page4.html">Thought $</a></li>
+          <li><a href="html/Page5.html">Thou....ght</a></li>
+          <li><a href="html/Page6.html">A really bad dream</a></li>
+      </ul>
+    </nav>
     <h1>
       All About Droogan
     </h1>
     <div id = "background">
     <p>Droogan is my best friend because he eats my extra thoughts.</p>
-    <p>Here are some thoughts that Droogan ate recently: </p>
+    <p>He and I wish you a very warm welcome!</p>
     </div>
-    <nav>
-      <ul>
-        <li><a href="#">Thought 1</a></li>
-          <li><a href="#">Thought 2</a></li>
-          <li><a href="#">Thought 5</a></li>
-          <li><a href="#">Thought $</a></li>
-          <li><a href="#">Thou....ght</a></li>
-          <li><a href="#">A really bad dream</a></li>
-      </ul>
-    </nav>
     </p>
   </body>
 </html>
