--- a/html/Page1.html
+++ b/html/Page1.html
@@ -1,14 +1,14 @@
 <html>
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
-    <script src="scripts/snowflakes.js"></script>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="../scripts/snowflakes.js"></script>
+    <link rel="stylesheet" type="text/css" href="../style.css">
   </head>
   <body>
     <nav id = "navBar">
       <ul>
-        <li><a href="index.html">Home!</a></li>
-          <li><a href="html/Page1.html">Thought 1</a></li>
+        <li><a href="../index.html">Home!</a></li>
+          <li><a href="Page1.html">Thought 1</a></li>
           <li><a href="html/Page2.html">Thought 2</a></li>
           <li><a href="html/Page3.html">Thought 5</a></li>
           <li><a href="html/Page4.html">Thought $</a></li>
