--- a/index.html
+++ b/index.html
@@ -5,24 +5,25 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
-    <nav id = "navBar">
-      <ul>
-        <li><a href="index.html">Home!</a></li>
-          <li><a href="html/Page1.html">Thought 1</a></li>
-          <li><a href="html/Page2.html">Thought 2</a></li>
-          <li><a href="html/Page3.html">Thought 5</a></li>
-          <li><a href="html/Page4.html">Thought $</a></li>
-          <li><a href="html/Page5.html">Thou....ght</a></li>
-          <li><a href="html/Page6.html">A really bad dream</a></li>
-      </ul>
-    </nav>
-    <h1>
-      All About Droogan
-    </h1>
+    <div id="title"> </div>
+    <img src = "https://raw.githubusercontent.com/bmclach/P1.3/main/Manon%20and%20dragon.jpg" alt = "Manon and Dragon">
     <div id = "background">
     <p>Droogan is my best friend because he eats my extra thoughts.</p>
-    <p>He and I wish you a very warm welcome!</p>
+    <p>Here are some thoughts that Droogan ate recently: </p>
     </div>
+    <nav>
+      <ul>
+        <li><a href="../index.html">Home!</a></li>
+          <li><a href="../html/Page1.html">Thought 1</a></li>
+          <li><a href="../html/Page2.html">Thought 2</a></li>
+          <li><a href="../html/Page3.html">Thought 5</a></li>
+          <li><a href="../html/Page4.html">Thought $</a></li>
+          <li><a href="../html/Page5.html">Thou....ght</a></li>
+          <li><a href="../html/Page6.html">A really bad dream</a></li>
+      </ul>
+    </nav>
     </p>
+  <br>
   </body>
+<footer class = "footer">I need a coffee -_-</footer>
 </html>
