--- a/html/Page5.html
+++ b/html/Page5.html
@@ -2,7 +2,7 @@
   <head>
     <script src="https://cdn.jsdelivr.net/npm/p5@1.2.0/lib/p5.js"></script>
     <script src="../scripts/colours.js"></script>
-    <link rel="stylesheet" type="text/css" href="../style.css">
+    <link rel="stylesheet" type="text/css" href="../style2.css">
   </head>
   <body>
     <nav id = "navBar">
