--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     </div>
     <nav>
       <ul>
-        <li><a href="../index.html">Home!</a></li>
-          <li><a href="../html/Page1.html">Thought 1</a></li>
-          <li><a href="../html/Page2.html">Thought 2</a></li>
-          <li><a href="../html/Page3.html">Thought 5</a></li>
-          <li><a href="../html/Page4.html">Thought $</a></li>
-          <li><a href="../html/Page5.html">Thou....ght</a></li>
-          <li><a href="../html/Page6.html">A really bad dream</a></li>
+        <li><a href="index.html">Home!</a></li>
+          <li><a href="html/Page1.html">Thought 1</a></li>
+          <li><a href="html/Page2.html">Thought 2</a></li>
+          <li><a href="html/Page3.html">Thought 5</a></li>
+          <li><a href="html/Page4.html">Thought $</a></li>
+          <li><a href="html/Page5.html">Thou....ght</a></li>
+          <li><a href="html/Page6.html">A really bad dream</a></li>
       </ul>
     </nav>
     </p>
